--- a/docker-compose-mpoon1.yml
+++ b/docker-compose-mpoon1.yml
@@ -2,7 +2,9 @@ version: '3.9'
 
 services:
   app:
-    build: .
+    build:
+      context: .
+      dockerfile: ./Docker/dockerfile
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
     ports:
       - "3000:3000"
@@ -16,6 +18,9 @@ services:
       POSTGRES_USERNAME: postgres
       POSTGRES_PASSWORD: mypassword
       RAILS_ENV: development
+      RAILS_SERVE_STATIC_FILES: "true"
+      EXECJS_RUNTIME: "Disabled"
+      BUNDLE_FORCE_RUBY_PLATFORM: "1"
       REDIS_URL: redis://redis:6379/0
 
   db:
@@ -31,7 +36,9 @@ services:
     image: redis:6.2
 
   sidekiq:
-    build: .
+    build:
+      context: .
+      dockerfile: ./Docker/dockerfile
     command: bundle exec sidekiq
     depends_on:
       - db
@@ -43,6 +50,9 @@ services:
       POSTGRES_USERNAME: postgres
       POSTGRES_PASSWORD: mypassword
       RAILS_ENV: development
+      RAILS_SERVE_STATIC_FILES: "true"
+      EXECJS_RUNTIME: "Disabled"
+      BUNDLE_FORCE_RUBY_PLATFORM: "1"
       REDIS_URL: redis://redis:6379/0
 
 volumes:
